--- a/1-组装/1-spades/markdown/1-依赖.md
+++ b/1-组装/1-spades/markdown/1-依赖.md
@@ -5,6 +5,7 @@
 ```sh
 # 推荐使用conda或者mamba安装
 conda create -n etoki python=3.8
+conda install -c conda-forge ete3
 conda install -c bioconda etoki
 # 可能会消耗掉1个GB的存储空间。
 ```
